Fixes overflow property for main container

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,6 +7,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   margin: 70px 0;
+  height: auto;
 }
 
 input {
@@ -14,8 +15,13 @@ input {
   padding-left: 25px !important;
 }
 
+main {
+  overflow: hidden;
+}
+
 .main-container {
   padding-top: 60px;
+  padding-bottom: 60px;
   width: 85%;
   margin: 0 auto;
 }
@@ -96,6 +102,8 @@ input {
   border-bottom: 20px solid #f1f1f1;
   top: -20px;
   left: 10%;
+}
+.messages {
 }
 
 .messages > div {
